add example to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,8 @@
             Anything that you want to share
           </li>
       </ul>
-      <!-- <a href class="text-center" style="text-align: center"> See some examples here.</a> -->
+      <p> Want inspiration? Check out <u><a href="http://www.babyl.online/caminante-en-nueva-york/"> Caminante en Nueva York</a></u>, a series of short stories Josefina is sharing! </p>
+   
       <br />
       <p class="h2text text-center" style="font-size:1.6rem">
         Why the name Babyl.online?
