--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,30 +1,3 @@
-/* body {
-  padding-bottom: 70px;
-} */
-/* 
-
-html,body{
-  height: 100%
-}
-
-#holder{
-  min-height: 100%;
-  position:relative;
-}
-
-#body{
-  padding-bottom: 100px;
-  margin-bottom: 50px;    /* height of footer */
-}
-
-/* footer{
-  height: 100px; 
-  width:100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;  */
-} */
-
 body {
   height: 100%;
 }
@@ -131,7 +104,7 @@ li:not(:last-child) {
 
 .bodytext {
   font-family: 'Hepta Slab', serif;
-  /* font-family: "Roboto", sans-serif; */
+  font-family: "Roboto", sans-serif;
   color: black;
   text-align: justify;
 }
