--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -99,14 +99,13 @@ li:not(:last-child) {
   font-size: 1rem;
   color: darkslategrey;
   font-family: 'Libre Baskerville', serif;
-  text-align: left;
+  text-align: justify;
 }
 
 .bodytext {
-  font-family: 'Hepta Slab', serif;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Libre Baskerville', serif;
   color: black;
-  text-align: justify;
+  text-align: left;
 }
 
 .dark {
