--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=B612|Montserrat:500|Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
         <link rel="stylesheet" href="{% static "css/bootstrap-lux.min.css" %}" />
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
