--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -104,8 +104,8 @@ li:not(:last-child) {
 
 .bodytext {
   font-family: 'Libre Baskerville', serif;
-  font-size: 22px;
-  color: darkgray;
+  font-size: 1.1rem;
+  color: #353535 ;
   text-align: left;
 }
 
