--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -48,8 +48,15 @@ a{
   width: 50%;
   /* padding: 10px; */
 }
+
 .h2text {
-  font-family: 'EB Garamond', serif;
+  font-family: "Roboto", sans-serif;
+  color: black;
+  font-size: 2.5rem;
+}
+
+.posth2text {
+  font-family: "Montserrat", sans-serif;
   color: black;
   font-size: 2.5rem;
 }
@@ -103,10 +110,19 @@ li:not(:last-child) {
 }
 
 .bodytext {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: black;
+  text-align: justify;
+  line-height: 1.4;
+}
+
+.postbodytext {
   font-family: 'Libre Baskerville', serif;
   font-size: 1rem;
-  color: #353535 ;
+  color: black;
   text-align: left;
+  line-height: 1.6;
 }
 
 .dark {
