final font change

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -37,8 +37,8 @@ a{
   font-family: "Righteous", cursive;
 }
 .mfont {
-  /* font-family: "Roboto", sans-serif; */
-  font-family: 'Hepta Slab', serif;
+  font-family: "Roboto", sans-serif;
+  /* font-family: 'Hepta Slab', serif; */
 
 }
 .center {
